foolish/foolish-core/src/snapshots/foolish_core__approval_tests__test_unanchored_oneshot.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 iyQGbHNhl1jYVccG0K3kdDWDkiTlSxZ9YxcpyYYwy8JiX+d/NzP6J6ZYcpxVwcEFQYBLAbVyBfx2gyaldofJCA==
INPUT: {
[0] PARSED:
Brane [EMBRYONIC]
  a = 
  Int(1) [INDEPENDENT]
  b = 
  Brane [EMBRYONIC]
    Int(10) [INDEPENDENT]
    Int(20) [INDEPENDENT]
    Int(30) [INDEPENDENT]
  c = 
  Index(offset=-1, FREE) [EMBRYONIC]
  d = 
  HeadTail(TAIL, ANCHORED) [EMBRYONIC]
  e = 
  Operator($) [EMBRYONIC]
    Index(offset=-1, FREE) [EMBRYONIC]
    Index(offset=-2, FREE) [EMBRYONIC]
RESULT:
Brane [NK]
  a = 
  Int(1) [INDEPENDENT]
  b = 
  Brane [CONSTANT]
    Int(10) [INDEPENDENT]
    Int(20) [INDEPENDENT]
    Int(30) [INDEPENDENT]
  c = 
  ??? (constanic_clone called on NYE FIR) [NK]
  d = 
  HeadTail(TAIL, ANCHORED) [NK]
  e = 
  Operator($) [NK]
    ??? (constanic_clone called on NYE FIR) [NK]
    ??? (constanic_clone called on NYE FIR) [NK]
