foolish/foolish-core/src/snapshots/foolish_core__approval_tests__unanchoredSeekBasic.snap
---
source: foolish-core/src/lib.rs
expression: output
---
INPUT: {
[0] PARSED:
Brane [EMBRYONIC]
  a = 
  Int(1) [INDEPENDENT]
  b = 
  Int(2) [INDEPENDENT]
  c = 
  Operator(+) [EMBRYONIC]
    Index(offset=-1, FREE) [EMBRYONIC]
    Index(offset=-2, FREE) [EMBRYONIC]
  val1 = 
  Int(3) [INDEPENDENT]
  val2 = 
  Int(4) [INDEPENDENT]
  val3 = 
  Int(5) [INDEPENDENT]
  sum = 
  Operator(+) [EMBRYONIC]
    Operator(+) [EMBRYONIC]
      Index(offset=-1, FREE) [EMBRYONIC]
      Index(offset=-2, FREE) [EMBRYONIC]
    Index(offset=-3, FREE) [EMBRYONIC]
  d = 
  Int(10) [INDEPENDENT]
  e = 
  Int(20) [INDEPENDENT]
  f = 
  Operator(+) [EMBRYONIC]
    Operator(+) [EMBRYONIC]
      Operator(+) [EMBRYONIC]
        Operator(+) [EMBRYONIC]
          Operator(+) [EMBRYONIC]
            Operator(+) [EMBRYONIC]
              Operator(+) [EMBRYONIC]
                Index(offset=-1, FREE) [EMBRYONIC]
                Index(offset=-2, FREE) [EMBRYONIC]
              Index(offset=-3, FREE) [EMBRYONIC]
            Index(offset=-4, FREE) [EMBRYONIC]
          Index(offset=-5, FREE) [EMBRYONIC]
        Index(offset=-6, FREE) [EMBRYONIC]
      Index(offset=-7, FREE) [EMBRYONIC]
    Index(offset=-8, FREE) [EMBRYONIC]
  g = 
  Brane [EMBRYONIC]
    aa = 
    Index(offset=-1, FREE) [EMBRYONIC]
    bb = 
    Int(3) [INDEPENDENT]
    cc = 
    Operator(*) [EMBRYONIC]
      Search(pattern='^bb$', dir=BACKWARD, FREE) [EMBRYONIC]
      Search(pattern='^bb$', dir=BACKWARD, FREE) [EMBRYONIC]
  h = 
  Operator($) [EMBRYONIC]
    Index(offset=-1, FREE) [EMBRYONIC]
    Index(offset=-1, FREE) [EMBRYONIC]
  i = 
  HeadTail(TAIL, ANCHORED) [EMBRYONIC]
  j = 
  Operator(^) [EMBRYONIC]
    Index(offset=-1, FREE) [EMBRYONIC]
    Index(offset=-3, FREE) [EMBRYONIC]
RESULT:
Brane [NK]
  a = 
  Int(1) [INDEPENDENT]
  b = 
  Int(2) [INDEPENDENT]
  c = 
  Int(3) [CONSTANT]
  val1 = 
  Int(3) [INDEPENDENT]
  val2 = 
  Int(4) [INDEPENDENT]
  val3 = 
  Int(5) [INDEPENDENT]
  sum = 
  Int(12) [CONSTANT]
  d = 
  Int(10) [INDEPENDENT]
  e = 
  Int(20) [INDEPENDENT]
  f = 
  Operator(+) [NK]
    Operator(+) [NK]
      Operator(+) [NK]
        Operator(+) [NK]
          Operator(+) [NK]
            Operator(+) [NK]
              Int(30) [CONSTANT]
              ??? (constanic_clone called on NYE FIR) [NK]
            Int(5) [INDEPENDENT]
          Int(4) [INDEPENDENT]
        Int(3) [INDEPENDENT]
      ??? (constanic_clone called on NYE FIR) [NK]
    Int(2) [INDEPENDENT]
  g = 
  Brane [NK]
    aa = 
    ??? (constanic_clone called on NYE FIR) [NK]
    bb = 
    Int(3) [INDEPENDENT]
    cc = 
    Int(9) [CONSTANT]
  h = 
  Operator($) [NK]
    ??? (constanic_clone called on NYE FIR) [NK]
    ??? (constanic_clone called on NYE FIR) [NK]
  i = 
  HeadTail(TAIL, ANCHORED) [NK]
  j = 
  Operator(^) [NK]
    ??? (constanic_clone called on NYE FIR) [NK]
    ??? (constanic_clone called on NYE FIR) [NK]
