foolish/foolish-core/src/snapshots/foolish_core__approval_tests__unanchored_seek.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 SFWZo5MvvukpUzX3ciF/DtgMiROBQOQ2cVeDmgV/aeyMF7PNUMos5DeINPE7vlK63KuIkbkL4oOm56YPvuofDw==
INPUT: {a=1,b=2,c=#-1;}
[0] PARSED:
Brane [EMBRYONIC]
  a = 
  Int(1) [INDEPENDENT]
  b = 
  Int(2) [INDEPENDENT]
  c = 
  Index(offset=-1, FREE) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  a = 
  Int(1) [INDEPENDENT]
  b = 
  Int(2) [INDEPENDENT]
  c = 
  Int(2) [INDEPENDENT]
