foolish/foolish-core/src/snapshots/foolish_core__approval_tests__unanchored_seek_basic.snap
---
source: foolish-core/src/lib.rs
expression: output
---
INPUT: {a = 1; b = 2; c = #-1 + #-2;}
[0] PARSED:
Brane [EMBRYONIC]
  a = 
  Int(1) [INDEPENDENT]
  b = 
  Int(2) [INDEPENDENT]
  c = 
  Operator(+) [EMBRYONIC]
    Index(offset=-1, FREE) [EMBRYONIC]
    Index(offset=-2, FREE) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  a = 
  Int(1) [INDEPENDENT]
  b = 
  Int(2) [INDEPENDENT]
  c = 
  Int(3) [CONSTANT]
