foolish/foolish-core/src/snapshots/foolish_core__approval_tests__unanchored_seek_large_negative.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 jaeg0z5WkYzurJYQKcsHVYjfYSxhiAJPG0vKBC+wYHIUkzNt4VshqiZ7eTidbkNfcJkvRxjtP13qh+NkaJWzAA==
INPUT: {a=1; b=2; c=3; d=#-100;}
[0] PARSED:
Brane [EMBRYONIC]
  a = 
  Int(1) [INDEPENDENT]
  b = 
  Int(2) [INDEPENDENT]
  c = 
  Int(3) [INDEPENDENT]
  d = 
  Index(offset=-100, FREE) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  a = 
  Int(1) [INDEPENDENT]
  b = 
  Int(2) [INDEPENDENT]
  c = 
  Int(3) [INDEPENDENT]
  d = 
  Int(1) [INDEPENDENT]
