foolish/foolish-core/src/snapshots/foolish_core__approval_tests__unicode_identifiers_basic.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 MNyK2g2dLADxk33RvosqXPlj1QJ2q+cm28Vo+F3RFmQd1HAEfm60PrtXpq2Y503r8kJxbW/fxLzFPiFgxRXWAA==
INPUT: {x = 1; π = 3; Б = 7; sum = x + π + Б;}
[0] PARSED:
Brane [EMBRYONIC]
  x = 
  Int(1) [INDEPENDENT]
  π = 
  Int(3) [INDEPENDENT]
  Б = 
  Int(7) [INDEPENDENT]
  sum = 
  Operator(+) [EMBRYONIC]
    Operator(+) [EMBRYONIC]
      Search(pattern='^x$', dir=BACKWARD, FREE) [EMBRYONIC]
      Search(pattern='^π$', dir=BACKWARD, FREE) [EMBRYONIC]
    Search(pattern='^Б$', dir=BACKWARD, FREE) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  x = 
  Int(1) [INDEPENDENT]
  π = 
  Int(3) [INDEPENDENT]
  Б = 
  Int(7) [INDEPENDENT]
  sum = 
  Int(11) [CONSTANT]
