foolish/foolish-core/src/snapshots/foolish_core__approval_tests__veryDeepNestingIsApproved.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 yT+NTr7C9MrSk0j1NLoayjrwzXtjaGSHaw4gYrHIgFTXBJMEPSMLuksaNCqoMp+AAV2jp4LV1Y4Sa417mYsKBA==
INPUT: {
[0] PARSED:
Brane [EMBRYONIC]
  Brane [EMBRYONIC]
    Brane [EMBRYONIC]
      Brane [EMBRYONIC]
        theˍanswerˍis = 
        Int(42) [INDEPENDENT]
RESULT:
Brane [CONSTANT]
  Brane [CONSTANT]
    Brane [CONSTANT]
      Brane [CONSTANT]
        theˍanswerˍis = 
        Int(42) [INDEPENDENT]
